--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "marvel",
   "version": "0.1.0",
   "private": true,
-  "home": "https://mmiksaa.github.io/marverlAPIproject/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,6 +9,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
